sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:18: error: value += is not a member of Int
      i+=1
       ^